==================================
Rilascio 1.69.14    del XX/04/2015
==================================

Portate le funzioni XML <=> JSON sotto la nuova libreria RYJAX.

Campi digitabili: aggiunta la combinazione SHIFT-END per selezionare tutto.

==================================
Rilascio 1.69.13    del 19/04/2015
==================================

Portate a oggetti molte funzioni di ryGeneral e ryBox.

==================================
Rilascio 1.69.12    del 18/04/2015
==================================

Aggiunte nuove funzioni prototipali in rygeneral.

Tolta la funzione "_utf8" e convertiti i file a "UTF-8" senza "BOM".

Aggiustamenti al nuovo contextMenu.

==================================
Rilascio 1.69.11    del 16/04/2015
==================================

Migliorato il comportamento del contextmenu ora attivabile con ALT-2.

Filibuster: ripristinata la sintesi vocale.

==================================
Rilascio 1.69.10    del 12/04/2015
==================================

ryUnbound: aggiunto i metodi insert e remove.

ryBound e ryQue: migliorata la gestione delle selezione per trascinamento (la "changerow" e la "selection" vengono fatte solo alla fine).

Aggiunte in String delle funzioni per normalizzare date e numeri.

ryBound: ricerca per digitazione.

==================================
Rilascio 1.69.09    del 09/04/2015
==================================

Migliorata la gestione delle colonne in ryGrid e ryUnbound.

ryUnbound: aggiunto il metodo "cells".

==================================
Rilascio 1.69.08    del 08/04/2015
==================================

Aggiunta la chiusura form a ryTabs.

Corretta la gestione della "resize" dei form.

==================================
Rilascio 1.69.07    del 07/04/2015
==================================

Rinominate sotto un oggetto QVR varie funzioni Javascript di ryQuiver.

==================================
Rilascio 1.69.06    del 06/04/2015
==================================
